# ollama-client

./: .gitignore  MANIFEST.in  README.md  config-dist.py  pyproject.toml  requirements.txt
docs/: ollama-client.service  ollama-serv.service
ollama_client/: __init__.py  __main__.py  cli.py  config-dist.py  main.py  migrations.py
ollama_client/core/: base_context.py  exceptions.py  flash.py  logging.py  middleware.py  send_mail.py  session.py  set_system_path.py  templates.py
ollama_client/database/: cache.py  crud.py  database_utils.py  migration.py  sql_builder.py
ollama_client/endpoints/: endpoints_chat.py  endpoints_error.py  endpoints_user.py
ollama_client/models/: chat_model.py  token_model.py  user_model.py
ollama_client/static/assets/: search.svg.txt
ollama_client/static/css/: dark.css  default.css  dolphin.css  flash.css  light.css  main-menu-overlay.css
ollama_client/static/favicon_io/: site.webmanifest
ollama_client/static/js/: app-copy-buttons.js  app-dialog.js  app-elements.js  app-events.js  app.js  diff-dom.js  error-log.js  exceptions.js  flash.js  main-menu-overlay.js  markdown.js  path-params.js  requests.js  test-mathjax-working.js  utils.js
ollama_client/templates/: base.html  error.html  test.html
ollama_client/templates/home/: chat.html
ollama_client/templates/includes/: importmap.html  scripts_head.html
ollama_client/templates/mails/: reset_password.html  verify_user.html
ollama_client/templates/users/: dialogs.html  login.html  logout.html  new_password.html  profile.html  reset_password.html  signup.html  verify.html
ollama_client/tools/: python_exec.py  tools_utils.py
tests/: test_ollama.py  test_password_methods.py  test_stream.py  test_tools.py
