[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-client"
version = "0.1.26"
description = "A simple python frontend for serving ollama models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "annotated-types==0.7.0", "anyio==4.8.0", "arrow==1.3.0", "bcrypt==4.2.1", "black==25.1.0", "captcha==0.7.0", "certifi==2024.12.14", "click==8.1.8", "flake8==7.1.2", "gunicorn==23.0.0", "h11==0.14.0", "httpcore==1.0.7", "httpx==0.27.2", "idna==3.10", "itsdangerous==2.2.0", "jinja2==3.1.5", "markupsafe==3.0.2", "mccabe==0.7.0", "mypy==1.15.0", "mypy-extensions==1.0.0", "ollama==0.4.6", "packaging==24.2", "pathspec==0.12.1", "pillow==11.1.0", "platformdirs==4.3.7", "pycodestyle==2.12.1", "pydantic==2.10.5", "pydantic-core==2.27.2", "pyflakes==3.2.0", "python-dateutil==2.9.0.post0", "python-dotenv==1.0.1", "python-multipart==0.0.20", "six==1.17.0", "sniffio==1.3.1", "starlette==0.45.2", "types-python-dateutil==2.9.0.20241206", "typing-extensions==4.12.2", "uvicorn==0.34.0",]
classifiers = [ "Development Status :: 1 - Planning", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.10",]
[[project.authors]]
name = "Dennis Iversen"
email = "dennis.iversen@gmail.com"

[project.license]
text = "MIT"

[project.scripts]
ollama-client = "ollama_client.cli:cli"

[project.urls]
Homepage = "https://github.com/diversen/ollama-html-client"

[tool.bump_version]
version_file = "ollama_client/__init__.py"

[tool.black]
line-length = 140

[tool.mypy]
exclude = [ "docs", "venv", ".venv", "generate_openaws_client", "tests", "example-config", "build", "bin-local",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ollama_serv = [ "templates/**", "static/**/**", "config-dist.py",]

[tool.bump_version.replace_patterns.pipx]
file = "README.md"
search = "<!-- LATEST-VERSION-PIPX -->"
replace = "\tpipx install git+https://github.com/diversen/ollama-client@{version}\n"

[tool.bump_version.replace_patterns.pipx_force]
file = "README.md"
search = "<!-- LATEST-VERSION-PIPX-FORCE -->"
replace = "\tpipx install git+https://github.com/diversen/ollama-client@{version} --force\n"

[tool.setuptools.packages.find]
where = [ "",]
include = [ "ollama_client", "ollama_client.*",]
